margin/padding bugs fixed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
                 <button nz-button (click)="onClickMe()" [nzType]="'primary'" [nzSize]="'small'">
                     <span>Sign In</span>
                 </button> 
-                <a href="SignUp">Sign up</a>
+                <a [routerLink]="[ '/signup']">Sign up</a>
                 
             </div>
             <div class="presentation" nz-col [nzXs]="24" [nzSm]="24" [nzMd]="12" [nzLg]="12" [nzXl]="12">
