--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -27,7 +27,7 @@
         <a class="login-form-forgot" class="login-form-forgot">Forgot password</a>
         <button nz-button class="login-form-button" [nzType]="'primary'" [nzSize]="'large'">Log in</button>
         Or
-        <a href="#">register now!</a>
+        <a [routerLink]="[ '/signup']">register now!</a>
       </div>
     </div>
   </form>
